// Definition of event records published from
// This file will keep the same in both java and c++ projects

syntax = "proto3";
package gringofts.demo.protos;

option java_multiple_files = true;
option java_package = "com.ebay.gringofts";
option java_outer_classname = "EventRecordsProto";
option objc_class_prefix = "ERP";

message BundleEntry {
  uint64 command_id = 1;
  int64 value = 2;
}

message FetchBundleRequest {
  uint64 commandId = 1;
  uint64 startEventId = 2;
}

message Status {
  uint64 code = 1;
  string errorMessage = 2;
}

message Meta {
  uint64 firstCommandId = 1;
  uint64 lastCommandId = 2;
}

message FetchBundleResponse {
  Status status = 1;
  BundleEntry bundleEntry = 2;
}

message Condition {
  bool isMigrated = 1;
  uint64 dataSource = 2;
}

message FetchBundlesRequest {
  uint64 startCommandId = 1; // Both startCommandId and endCommandId included. [startCommandId, endCommandId]
  uint64 endCommandId = 2;
  Condition condition = 3;
}

message FetchBundlesResponse {
  Status status = 1;
  Meta meta = 2;
  repeated BundleEntry bundleEntries = 3;
}

service BundleExposeService {
  rpc FetchBundle (FetchBundleRequest) returns (FetchBundleResponse) {}
  rpc FetchBundles (FetchBundlesRequest) returns (FetchBundlesResponse) {}
}
